# cog-generator

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  main.py  pyproject.toml
