[project]
name = "cog-generator"
version = "0.1.0"
description = "Utils to generate COG files using i/o from S3."
authors = [
    {name = "Sam Woodcock", email = "samuel.woodcock@wsl.ch"},
]
dependencies = [
    "envidat-utils[dotenv]>=1.0.2",
    "rio-cogeo>=3.2.0",
    "rasterio>=1.2.10",
    "click>=8.1.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["envidat", "cog", "geotiff", "s3"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
